--- a/Miembros.html
+++ b/Miembros.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <h1>Miembrose</h1>
-    <p>Miguel Carrero Pazos (USC)
+    <p>Miguel Carrero Pazos (USC) 
+        <img src="images/MCP.jpeg" alt="Miguel Carrero Pazos">
       Jorge Rouco Collazo (Incipit, CSIC)
-      Mikel Díaz Rodríguez (USC)
+      Mikel Díaz Rodríguez (USC) 
+        <img src="images/MDR.jpeg" alt="Mikel Díaz Rodríguez">
       Alexis Maldonado Ruiz (USC)
       José Ramón Rabuñal Gayo (USC) .</p>
     <script src="js/script.js"></script>
