--- a/Miembros.html
+++ b/Miembros.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Miembrose</h1>
-    <p>Miguel Carrero Pazos (USC) 
-        <img src="images/MCP.jpeg" alt="Miguel Carrero Pazos">
-      Jorge Rouco Collazo (Incipit, CSIC)
-      Mikel Díaz Rodríguez (USC) 
-        <img src="images/MDR.jpeg" alt="Mikel Díaz Rodríguez">
-      Alexis Maldonado Ruiz (USC)
-      José Ramón Rabuñal Gayo (USC) .</p>
+    <h1>Miembros</h1>
+    <p>Miguel Carrero Pazos (USC)</p>
+    <img src="images/MCP.jpeg" alt="Miguel Carrero Pazos" style="width:100px;height:auto;">
+    <p>Jorge Rouco Collazo (Incipit, CSIC)</p>
+    <p>Mikel Díaz Rodríguez (USC)</p>
+    <img src="images/MDR.jpeg" alt="Mikel Díaz Rodríguez" style="width:100px;height:auto;">
+    <p>Alexis Maldonado Ruiz (USC)</p>
+    <p>José Ramón Rabuñal Gayo (USC).</p>
     <script src="js/script.js"></script>
 </body>
 </html>
