--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
     <h1>Laboratorio de Arqueología Computacional (LARC)</h1>
-    <p>Universidad de Santiago de Compostela</p>
+    <p>Universidad de Santiago de Compostela.</p>
+
     <script src="js/script.js"></script>
 </body>
 </html>
