--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="Historia del LARC.html">About Us</a></li>
+            <li><a href="Miembros.html">Contact</a></li>
         </ul>
     </nav>
 
