--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Historia del LARC.html">About Us</a></li>
-            <li><a href="Miembros.html">Contact</a></li>
+            <li><a href="index.html">Índice</a></li>
+            <li><a href="Historia del LARC.html">Historia del LARC</a></li>
+            <li><a href="Miembros.html">Miembros</a></li>
         </ul>
     </nav>
 
