--- a/Miembros.html
+++ b/Miembros.html
@@ -17,4 +17,16 @@
     <p>José Ramón Rabuñal Gayo (USC).</p>
     <script src="js/script.js"></script>
 </body>
+    <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Índice</a></li>
+            <li><a href="Historia del LARC.html">Historia del LARC</a></li>
+            <li><a href="Miembros.html">Miembros</a></li>
+            <!-- Add other links as needed -->
+        </ul>
+    </nav>
+
+    <!-- Page-specific content goes here -->
+</body>
 </html>
