Update Historia del LARC.html

--- a/Historia del LARC.html
+++ b/Historia del LARC.html
@@ -11,4 +11,18 @@
     <p>Hace mucho tiempo, en una galaxia lejana, muy lejana....</p>
     <script src="js/script.js"></script>
 </body>
+  <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Índice</a></li>
+            <li><a href="Historia del LARC.html">Historia del LARC</a></li>
+            <li><a href="Miembros.html">Miembros</a></li>
+            <!-- Add other links as needed -->
+        </ul>
+    </nav>
+
+    <!-- Page-specific content goes here -->
+</body>
+</html>
+    
 </html>
