--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <nav>
+        <div class="hamburger" onclick="toggleMenu()">☰</div>
+<ul>
+    <li><a href="index.html">Índice</a></li>
+    <li><a href="Historia del LARC.html">Historia del LARC</a></li>
+    <li><a href="Miembros.html">Miembros</a></li>
+    </ul>
         <ul>
             <li><a href="index.html">Índice</a></li>
             <li><a href="Historia del LARC.html">Historia del LARC</a></li>
