--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1>Laboratorio de Arqueología Computacional (LARC)</h1>
+    <p>Universidad de Santiago de Compostela.</p>
+
     <nav>
         <div class="hamburger" onclick="toggleMenu()">☰</div>
-        <ul>
+        <ul id="menu">
             <li><a href="index.html">Índice</a></li>
             <li><a href="Historia del LARC.html">Historia del LARC</a></li>
             <li><a href="Miembros.html">Miembros</a></li>
         </ul>
     </nav>
-
-    <h1>Laboratorio de Arqueología Computacional (LARC)</h1>
-    <p>Universidad de Santiago de Compostela.</p>
 
     <script src="js/script.js"></script>
 </body>
