--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <p>Universidad de Santiago de Compostela.</p>
 
     <nav>
-        <div class="hamburger" onclick="toggleMenu()">☰</div>
         <ul id="menu">
-            <li><a href="index.html">Índice</a></li>
-            <li><a href="Historia del LARC.html">Historia del LARC</a></li>
-            <li><a href="Miembros.html">Miembros</a></li>
+            <li><a href="index.html" class="button">Índice</a></li>
+            <li><a href="Historia del LARC.html" class="button">Historia del LARC</a></li>
+            <li><a href="Miembros.html" class="button">Miembros</a></li>
         </ul>
     </nav>
 
