--- a/Miembros.html
+++ b/Miembros.html
@@ -8,25 +8,32 @@
 </head>
 <body>
     <h1>Miembros</h1>
-    <p>Miguel Carrero Pazos (USC)</p>
-    <img src="images/MCP.jpeg" alt="Miguel Carrero Pazos" style="width:100px;height:auto;">
-    <p>Jorge Rouco Collazo (Incipit, CSIC)</p>
-    <p>Mikel Díaz Rodríguez (USC)</p>
-    <img src="images/MDR.jpeg" alt="Mikel Díaz Rodríguez" style="width:100px;height:auto;">
-    <p>Alexis Maldonado Ruiz (USC)</p>
-    <p>José Ramón Rabuñal Gayo (USC).</p>
-    <script src="js/script.js"></script>
-</body>
-    <body>
+    <div class="member">
+        <p>Miguel Carrero Pazos (USC)</p>
+        <img src="images/MCP.jpeg" alt="Miguel Carrero Pazos" class="member-image">
+    </div>
+    <div class="member">
+        <p>Jorge Rouco Collazo (Incipit, CSIC)</p>
+    </div>
+    <div class="member">
+        <p>Mikel Díaz Rodríguez (USC)</p>
+        <img src="images/MDR.jpeg" alt="Mikel Díaz Rodríguez" class="member-image">
+    </div>
+    <div class="member">
+        <p>Alexis Maldonado Ruiz (USC)</p>
+    </div>
+    <div class="member">
+        <p>José Ramón Rabuñal Gayo (USC).</p>
+    </div>
+    
     <nav>
         <ul>
             <li><a href="index.html">Índice</a></li>
             <li><a href="Historia del LARC.html">Historia del LARC</a></li>
             <li><a href="Miembros.html">Miembros</a></li>
-            <!-- Add other links as needed -->
         </ul>
     </nav>
 
-    <!-- Page-specific content goes here -->
+    <script src="js/script.js"></script>
 </body>
 </html>
