--- a/Miembros.html
+++ b/Miembros.html
@@ -26,11 +26,11 @@
         <p>José Ramón Rabuñal Gayo (USC).</p>
     </div>
     
-    <nav>
-        <ul>
-            <li><a href="index.html">Índice</a></li>
-            <li><a href="Historia del LARC.html">Historia del LARC</a></li>
-            <li><a href="Miembros.html">Miembros</a></li>
+ <nav>
+        <ul id="menu">
+            <li><a href="index.html" class="button">Índice</a></li>
+            <li><a href="Historia del LARC.html" class="button">Historia del LARC</a></li>
+            <li><a href="Miembros.html" class="button">Miembros</a></li>
         </ul>
     </nav>
 
