Update Historia del LARC.html

--- a/Historia del LARC.html
+++ b/Historia del LARC.html
@@ -12,12 +12,11 @@
     <script src="js/script.js"></script>
 </body>
   <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Índice</a></li>
-            <li><a href="Historia del LARC.html">Historia del LARC</a></li>
-            <li><a href="Miembros.html">Miembros</a></li>
-            <!-- Add other links as needed -->
+ <nav>
+        <ul id="menu">
+            <li><a href="index.html" class="button">Índice</a></li>
+            <li><a href="Historia del LARC.html" class="button">Historia del LARC</a></li>
+            <li><a href="Miembros.html" class="button">Miembros</a></li>
         </ul>
     </nav>
 
