--- a/index.html
+++ b/index.html
@@ -1,23 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/locales/es.js"></script>
 </head>
 <body>
-    <h1>Laboratorio de Arqueología Computacional (LARC)</h1>
-    <p>Universidad de Santiago de Compostela.</p>
+
+    <h1>Laboratorio de Computación, Teledetección y Modelado 3D/h1>
+    <p>CISPAC</p>
 
     <nav>
         <ul id="menu">
             <li><a href="index.html" class="button">Índice</a></li>
-            <li><a href="Historia del LARC.html" class="button">Historia del LARC</a></li>
+            <li><a href="Equipos disponibles.html" class="button">Historia del LARC</a></li>
             <li><a href="Miembros.html" class="button">Miembros</a></li>
         </ul>
     </nav>
 
+    <h2>Reserva de Equipos</h2>
+    <div id="calendar"></div>
+
+    <!-- Modal de selección -->
+    <div id="modal">
+        <h3>Selecciona un equipo</h3>
+        <select id="equipoSelect">
+            <option value="Workstation de procesamiento">Workstation de procesamiento</option>
+            <option value="Dron LiDAR">Dron LiDAR</option>
+            <option value="Láser escáner de corto alcance">Láser escáner de corto alcance</option>
+            <option value="Láser escáner de largo alcance">Láser escáner de largo alcance</option>
+        </select>
+        <button id="confirmarReserva">Confirmar</button>
+        <button onclick="cerrarModal()">Cancelar</button>
+    </div>
+
     <script src="js/script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var calendarEl = document.getElementById('calendar');
+            var selectedDate = null;
+
+            var calendar = new FullCalendar.Calendar(calendarEl, {
+                initialView: 'dayGridMonth',
+                locale: 'es',
+                editable: true,
+                selectable: true,
+                events: [], // Aquí se cargarán las reservas
+                dateClick: function(info) {
+                    selectedDate = info.dateStr;
+                    abrirModal();
+                }
+            });
+            calendar.render();
+
+            function abrirModal() {
+                document.getElementById("modal").style.display = "block";
+            }
+
+            function cerrarModal() {
+                document.getElementById("modal").style.display = "none";
+            }
+
+            document.getElementById("confirmarReserva").addEventListener("click", function() {
+                let equipo = document.getElementById("equipoSelect").value;
+                let nuevaReserva = {
+                    title: equipo,
+                    start: selectedDate
+                };
+
+                console.log("Reserva guardada:", nuevaReserva);
+                calendar.addEvent(nuevaReserva);
+                cerrarModal();
+            });
+        });
+    </script>
+
+    <style>
+        #modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 20px;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+            z-index: 1000;
+        }
+        #modal select, #modal button {
+            display: block;
+            margin: 10px 0;
+        }
+    </style>
+
 </body>
 </html>
