Update Historia del LARC.html

--- a/Historia del LARC.html
+++ b/Historia del LARC.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Historia del LARC</h1>
+    <h1>Equipos disponibles</h1>
     <p>Hace mucho tiempo, en una galaxia lejana, muy lejana....</p>
     <script src="js/script.js"></script>
 </body>
@@ -15,7 +15,7 @@
  <nav>
         <ul id="menu">
             <li><a href="index.html" class="button">Índice</a></li>
-            <li><a href="Historia del LARC.html" class="button">Historia del LARC</a></li>
+            <li><a href="Equipos disponibles.html" class="button">Equipos disponibles</a></li>
             <li><a href="Miembros.html" class="button">Miembros</a></li>
         </ul>
     </nav>
