--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <nav>
         <ul id="menu">
             <li><a href="index.html" class="button">Índice</a></li>
-            <li><a href="Equipos disponibles.html" class="button">Historia del LARC</a></li>
-            <li><a href="Miembros.html" class="button">Miembros</a></li>
+            <li><a href="Equipos disponibles.html" class="button">Equipos disponibles</a></li>
         </ul>
     </nav>
 
