--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <h1>Laboratorio de Computación, Teledetección y Modelado 3D/h1>
+    <h1>Laboratorio de Computación, Teledetección y Modelado 3D</h1>
     <p>CISPAC</p>
 
     <nav>
