--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
             <option value="Láser escáner de largo alcance">Láser escáner de largo alcance</option>
         </select>
         <button id="confirmarReserva">Confirmar</button>
-        <button onclick="cerrarModal()">Cancelar</button>
+        <button id="cerrarModal">Cancelar</button>
     </div>
 
-    <script src="js/script.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             var calendarEl = document.getElementById('calendar');
@@ -75,6 +74,8 @@
                 calendar.addEvent(nuevaReserva);
                 cerrarModal();
             });
+
+            document.getElementById("cerrarModal").addEventListener("click", cerrarModal);
         });
     </script>
 
