--- a/Equipos disponibles.html
+++ b/Equipos disponibles.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Equipos Disponibles</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Equipos disponibles</h1>
-    <p>Hace mucho tiempo, en una galaxia lejana, muy lejana....</p>
-    <script src="js/script.js"></script>
-</body>
-  <body>
- <nav>
-        <ul id="menu">
-            <li><a href="index.html" class="button">Índice</a></li>
-            <li><a href="Equipos disponibles.html" class="button">Equipos disponibles</a></li>
-        </ul>
-    </nav>
 
-    <!-- Page-specific content goes here -->
+    <h1>Equipos Disponibles</h1>
+    <ul>
+        <li>Workstation de procesamiento</li>
+        <li>Dron LiDAR</li>
+        <li>Láser escáner de corto alcance</li>
+        <li>Láser escáner de largo alcance</li>
+    </ul>
+
+    <a href="index.html">Volver al inicio</a>
+
 </body>
-</html>
-    
 </html>
