--- a/Equipos disponibles.html
+++ b/Equipos disponibles.html
@@ -5,18 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipos Disponibles</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {
+            font-family: "Helvetica", "Arial", sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f5f5f5;
+            color: #333;
+            text-align: center;
+        }
+
+        h1 {
+            color: #0366d6;
+            font-size: 2em;
+        }
+
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            background: #0366d6;
+            color: white;
+            margin: 10px 0;
+            padding: 15px;
+            border-radius: 5px;
+            font-size: 1.2em;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        li:hover {
+            background: #024ea2;
+        }
+
+        a {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            text-decoration: none;
+            color: white;
+            background: #28a745;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        a:hover {
+            background: #218838;
+        }
+    </style>
 </head>
 <body>
 
-    <h1>Equipos Disponibles</h1>
-    <ul>
-        <li>Workstation de procesamiento</li>
-        <li>Dron LiDAR</li>
-        <li>Láser escáner de corto alcance</li>
-        <li>Láser escáner de largo alcance</li>
-    </ul>
+    <div class="container">
+        <h1>Equipos Disponibles</h1>
+        <ul>
+            <li>Workstation de procesamiento</li>
+            <li>Dron LiDAR</li>
+            <li>Láser escáner de corto alcance</li>
+            <li>Láser escáner de largo alcance</li>
+        </ul>
 
-    <a href="index.html">Volver al inicio</a>
+        <a href="index.html">Volver al inicio</a>
+    </div>
 
 </body>
 </html>
