--- a/Equipos disponibles.html
+++ b/Equipos disponibles.html
@@ -74,6 +74,7 @@
             <li>Dron LiDAR</li>
             <li>Láser escáner de corto alcance</li>
             <li>Láser escáner de largo alcance</li>
+            <li>Impresora 3D</li> <!-- Nuevo equipo añadido -->
         </ul>
 
         <a href="index.html">Volver al inicio</a>
