--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/locales/es.js"></script>
+
+    <style>
+        #modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            z-index: 1000;
+            width: 300px;
+        }
+
+        #modalOverlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.5);
+            z-index: 999;
+        }
+
+        #modal h3 {
+            margin-top: 0;
+        }
+    </style>
 </head>
 <body>
 
@@ -21,7 +53,6 @@
         </ul>
     </nav>
 
-    <!-- Sección de Precios -->
     <h2>Precios</h2>
     <table>
         <tr>
@@ -56,18 +87,19 @@
         </tr>
     </table>
 
-    <!-- Sección de Reserva -->
     <h2>Reserva de Equipos</h2>
 
     <div id="filterContainer" style="margin-bottom: 10px; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">
         <label for="equipmentFilterSelect" style="margin-right: 8px; font-weight: bold;">Filtrar por Equipo:</label>
         <select id="equipmentFilterSelect" style="padding: 5px; border-radius: 3px; border: 1px solid #ccc;">
             <option value="">Todos los Equipos</option>
-            <!-- Equipment options will be dynamically populated by JavaScript -->
         </select>
     </div>
 
     <div id="calendar"></div>
+
+    <!-- Overlay oscuro -->
+    <div id="modalOverlay"></div>
 
     <!-- Modal de selección -->
     <div id="modal">
@@ -77,7 +109,6 @@
         
         <label for="equipoSelect" style="display: block; margin-top: 10px; margin-bottom: 5px; font-weight: bold;">Selecciona un equipo:</label>
         <select id="equipoSelect" style="margin-bottom: 10px; padding: 8px; width: calc(100% - 22px); border: 1px solid #ccc; border-radius: 4px;">
-            <!-- Options will be populated by JavaScript -->
             <option value="" disabled selected>Cargando equipos...</option> 
         </select>
         
