--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
+      text-align: center;
     }
     #calendar {
       max-width: 900px;
-      margin-top: 30px;
+      margin: 30px auto;
+      height: 700px; /* Esto es clave */
+    }
+    #equipos-select {
+      font-size: 1.1em;
+      padding: 6px 10px;
+      margin-bottom: 10px;
     }
   </style>
 </head>
@@ -48,7 +55,6 @@
           right: 'dayGridMonth,timeGridWeek,timeGridDay'
         },
         events: [
-          // Aquí puedes poner eventos de ejemplo
           {
             title: 'Reserva equipo1',
             start: '2025-05-24',
