--- a/index.html
+++ b/index.html
@@ -1,92 +1,90 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Reserva Equipos + Calendario</title>
-
-  <!-- FullCalendar CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css" rel="stylesheet" />
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      text-align: center;
-    }
-    #calendar {
-      max-width: 900px;
-      margin: 30px auto;
-      height: 700px; /* Esto es clave */
-    }
-    #equipos-select {
-      font-size: 1.1em;
-      padding: 6px 10px;
-      margin-bottom: 10px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/locales/es.js"></script>
 </head>
 <body>
 
-  <h2>Selecciona un equipo para reservar</h2>
-  <select id="equipos-select">
-    <option value="">-- Selecciona un equipo --</option>
-    <option value="equipo1">Equipo 1</option>
-    <option value="equipo2">Equipo 2</option>
-    <option value="equipo3">Equipo 3</option>
-  </select>
+    <h1>Laboratorio de Computación, Teledetección y Modelado 3D</h1>
+    <p>CISPAC</p>
 
-  <div id="calendar"></div>
+    <nav>
+        <ul id="menu">
+            <li><a href="index.html" class="button">Índice</a></li>
+            <li><a href="Equipos disponibles.html" class="button">Equipos disponibles</a></li>
+        </ul>
+    </nav>
 
-  <!-- FullCalendar JS -->
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/main.min.js"></script>
+    <!-- Sección de Precios -->
+    <h2>Precios</h2>
+    <table>
+        <tr>
+            <th>Equipamiento</th>
+            <th>Descripción</th>
+            <th>Precio por hora</th>
+        </tr>
+        <tr>
+            <td>Workstation de procesamiento</td>
+            <td>Computador de alto rendimiento</td>
+            <td>$15</td>
+        </tr>
+        <tr>
+            <td>Dron LiDAR</td>
+            <td>Mapeo aéreo con LiDAR</td>
+            <td>$50</td>
+        </tr>
+        <tr>
+            <td>Láser escáner de corto alcance</td>
+            <td>Escaneo de precisión para objetos pequeños</td>
+            <td>$30</td>
+        </tr>
+        <tr>
+            <td>Láser escáner de largo alcance</td>
+            <td>Escaneo de estructuras y paisajes</td>
+            <td>$40</td>
+        </tr>
+        <tr>
+            <td>Impresora 3D</td>
+            <td>Prototipado rápido y fabricación aditiva</td>
+            <td>$20</td>
+        </tr>
+    </table>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      var calendarEl = document.getElementById('calendar');
+    <!-- Sección de Reserva -->
+    <h2>Reserva de Equipos</h2>
 
-      var calendar = new FullCalendar.Calendar(calendarEl, {
-        initialView: 'dayGridMonth',
-        selectable: true,
-        selectMirror: true,
-        headerToolbar: {
-          left: 'prev,next today',
-          center: 'title',
-          right: 'dayGridMonth,timeGridWeek,timeGridDay'
-        },
-        events: [
-          {
-            title: 'Reserva equipo1',
-            start: '2025-05-24',
-            end: '2025-05-26',
-            extendedProps: {
-              equipo: 'equipo1'
-            }
-          }
-        ],
-        select: function(info) {
-          const equipoSeleccionado = document.getElementById('equipos-select').value;
-          if (!equipoSeleccionado) {
-            alert('Por favor selecciona un equipo antes de reservar.');
-            calendar.unselect();
-            return;
-          }
-          const confirmar = confirm(`¿Confirmas la reserva de ${equipoSeleccionado} desde ${info.startStr} hasta ${info.endStr}?`);
-          if (confirmar) {
-            calendar.addEvent({
-              title: `Reserva ${equipoSeleccionado}`,
-              start: info.start,
-              end: info.end,
-              allDay: info.allDay
-            });
-          }
-          calendar.unselect();
-        }
-      });
+    <div id="filterContainer" style="margin-bottom: 10px; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">
+        <label for="equipmentFilterSelect" style="margin-right: 8px; font-weight: bold;">Filtrar por Equipo:</label>
+        <select id="equipmentFilterSelect" style="padding: 5px; border-radius: 3px; border: 1px solid #ccc;">
+            <option value="">Todos los Equipos</option>
+            <!-- Equipment options will be dynamically populated by JavaScript -->
+        </select>
+    </div>
 
-      calendar.render();
-    });
-  </script>
+    <div id="calendar"></div>
 
+    <!-- Modal de selección -->
+    <div id="modal">
+        <h3>Realizar Reserva</h3>
+        <label for="tituloReserva" style="display: block; margin-top: 10px; margin-bottom: 5px; font-weight: bold;">Título de la Reserva:</label>
+        <input type="text" id="tituloReserva" placeholder="Ej: Procesamiento fotos LiDAR" style="margin-bottom: 10px; padding: 8px; width: calc(100% - 22px); border: 1px solid #ccc; border-radius: 4px;">
+        
+        <label for="equipoSelect" style="display: block; margin-top: 10px; margin-bottom: 5px; font-weight: bold;">Selecciona un equipo:</label>
+        <select id="equipoSelect" style="margin-bottom: 10px; padding: 8px; width: calc(100% - 22px); border: 1px solid #ccc; border-radius: 4px;">
+            <!-- Options will be populated by JavaScript -->
+            <option value="" disabled selected>Cargando equipos...</option> 
+        </select>
+        
+        <button id="confirmarReserva" style="padding: 10px; margin-top: 5px; background-color: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer;">Confirmar Reserva</button>
+        <button id="cerrarModal" style="padding: 10px; margin-top: 5px; background-color: #6c757d; color: white; border: none; border-radius: 4px; cursor: pointer;">Cancelar</button>
+    </div>
+
+    <script src="js/script.js" defer></script>
 </body>
 </html>
